updated cdn page #672

--- a/pages/download-and-setup.html
+++ b/pages/download-and-setup.html
@@ -34,27 +34,28 @@ permalink: "download-and-setup.html"
 
    <h2 id="Commonlinks" class="h3 mt-0">Common V6 State Web Template File Links</h2>
 
-   <div class="flex-container" style="justify-content:space-between;gap:1rem;">
+   <div class="flex-container justify-content-between gap-3 font-size-15">
     <div class="brd-solid-1 brd-gray-light bg-white p-3">
-     <strong><a
+     <span class="bold"><a
        href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website#available-state-web-template-frameworks">Template
-       frameworks</a> core code without sample content</strong>
-     <ul class="mt-2" style="columns:2;">
+       frameworks</a> core code without sample content</span>
+     <ul class="mt-2 p-l-md" style="columns:2;">
       <li><a href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-HTML">HTML</a>
       </li>
       <li><a href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-eleventy">Eleventy</a>
       </li>
       <li><a href="https://github.com/Office-of-Digital-Services/California-State-Template-NET-core">NET
         core</a></li>
-      <li><a href="https://github.com/Office-of-Digital-Services/California-State-Template-MVC-v5">MVC</a>
+      <li class="m-l"><a href="https://github.com/Office-of-Digital-Services/California-State-Template-MVC-v5">MVC</a>
       </li>
-      <li><a href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-react">React</a>
+      <li class="m-l"><a
+        href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-react">React</a>
       </li>
      </ul>
     </div>
     <div class="brd-solid-1 brd-gray-light bg-white p-3">
-     <strong>State web template website with all sample content</strong>
-     <ul class="mt-2">
+     <span class="bold">State web template website with all sample content</span>
+     <ul class="mt-2 p-l-md">
       <li><a href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website/">Github
         Repository</a></li>
       <li><a href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website/releases">Latest
@@ -62,9 +63,9 @@ permalink: "download-and-setup.html"
      </ul>
     </div>
     <div class="brd-solid-1 brd-gray-light bg-white p-3">
-     <strong>CDN (content delivery network)</strong>
-     <ul class="mt-2">
-      <li><a href="https://template.webstandards.ca.gov/cdn.html">V6 Beta CSS/ JS core CDN links</a>
+     <span class="bold">CDN (content delivery network)</span>
+     <ul class="mt-2 p-l-md">
+      <li><a href="/cdn.html">CSS/JS core CDN links</a>
       </li>
      </ul>
     </div>
@@ -76,7 +77,7 @@ permalink: "download-and-setup.html"
   <p>These are the high-level steps to take when you upgrade to the latest template.</p>
 
   <ol class="cagov-step-list">
-   <li><strong>Back up your current site</strong>
+   <li><span class="bold">Back up your current site</span>
     <br />
     <span class="cagov-step-list-content">
      <p>Before you start, save a copy of your current site. If there’s an issue, you won’t lose your
@@ -85,7 +86,7 @@ permalink: "download-and-setup.html"
     </span>
    </li>
 
-   <li><strong>Select a framework</strong>
+   <li><span class="bold">Select a framework</span>
     <br />
     <span class="cagov-step-list-content">
      <p>Current frameworks include HTML, Eleventy, NET core, MVC, and React. You’ll usually pick the
@@ -93,7 +94,7 @@ permalink: "download-and-setup.html"
     </span>
    </li>
 
-   <li><strong>Understand the differences in the code</strong>
+   <li><span class="bold">Understand the differences in the code</span>
     <br />
     <span class="cagov-step-list-content">
      <p>Review template updates. Do a code comparison in the <a
@@ -107,21 +108,20 @@ permalink: "download-and-setup.html"
     </span>
    </li>
 
-   <li><strong>Download or clone the State Web Template from GitHub</strong>
+   <li><span class="bold">Download or clone the State Web Template from GitHub</span>
     <br />
     <span class="cagov-step-list-content">
      <p>You can clone it from our <a
        href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website/">Template GitHub
        Repository</a>.</p>
-     <p>Or you can download or access the different frameworks. Review <a
-       href="https://docs.google.com/document/d/1A--CplY-8qepW4dG_jG0Bdg-eiDgqZ5RQgt7lD8jVPo/edit#heading=h.213onhd5id1o">Common
+     <p>Or you can download or access the different frameworks. Review <a href="#Commonlinks">Common
        V6 State Web Template file
        links</a>. This is
       also a good time to have your security office perform a scan of the files.</p>
     </span>
    </li>
 
-   <li><strong>Look for CSS, JavaScript, and structural changes</strong>
+   <li><span class="bold">Look for CSS, JavaScript, and structural changes</span>
     <br />
     <span class="cagov-step-list-content">
      <p>Most changes are made in:</p>
@@ -132,13 +132,12 @@ permalink: "download-and-setup.html"
     </span>
    </li>
 
-   <li><strong>Replace older library files with the updated ones</strong>
+   <li><span class="bold">Replace older library files with the updated ones</span>
     <br />
     <span class="cagov-step-list-content">
      <p>The web template has CSS and JavaScript (JS) code base. You will replace these source files with
       newer ones or
-      point to the corresponding CDN links found on the <a
-       href="https://as-cdt-pub-migr-betaws-ww-p-001-stage.azurewebsites.net/cdn.html">state web
+      point to the corresponding CDN links found on the <a href="/cdn.html">state web
        template CDN</a> page. If you have a custom
       CSS or JS
       code, you may need to update that too. Keep your customizations separate from the core template
@@ -147,7 +146,7 @@ permalink: "download-and-setup.html"
     </span>
    </li>
 
-   <li><strong>Integrate the new template into your environment</strong>
+   <li><span class="bold">Integrate the new template into your environment</span>
     <br />
     <span class="cagov-step-list-content">
      <p>From your code comparison, make the necessary changes and updates to your code. Usually,
@@ -160,7 +159,7 @@ permalink: "download-and-setup.html"
     </span>
    </li>
 
-   <li><strong>Perform necessary tests and reviews</strong>
+   <li><span class="bold">Perform necessary tests and reviews</span>
     <br />
     <span class="cagov-step-list-content">
      <p>After core source code has been updated, you should thoroughly review and test your website or
@@ -173,7 +172,7 @@ permalink: "download-and-setup.html"
     </span>
    </li>
 
-   <li><strong>Release to production</strong>
+   <li><span class="bold">Release to production</span>
     <br />
     <span class="cagov-step-list-content">
      <p>Yay! You’re now ready to follow your organization's change management and release process. You
@@ -191,25 +190,27 @@ permalink: "download-and-setup.html"
 
   <h2 id="FolderStructure">Folder structure and files</h2>
 
-  <p>Discover what’s in the V6 State Template package. Review <a
-    href="https://as-cdt-pub-migr-betaws-ww-p-001-stage.azurewebsites.net/download-and-setup.html">Download
+  <p>Discover what’s in the V6 State Template package. Review <a href="/download-and-setup.html">Download
     and setup</a> for more details.</p>
 
   <div class="flex-container">
    <div class="brd-solid-1 brd-gray-light p-3">
     <ul class="folder-structure-list">
-     <li><strong>_site</strong> - Contains the output files.</li>
-     <li><strong>Pages</strong> - The site’s web pages are saved here. These are the pages a developer or
+     <li class="m-t"><span class="bold">_site</span> - Contains the output files.</li>
+     <li class="m-t"><span class="bold">Pages</span> - The site’s web pages are saved here. These are the pages a
+      developer or
       content editor can edit.
      </li>
-     <li><strong>src</strong> - Source folder. Contains includes, modules, fonts, images, SCSS and
+     <li class="m-t"><span class="bold">src</span> - Source folder. Contains includes, modules, fonts, images, SCSS and
       JavaScript files.</li>
-     <li><strong>Images</strong> - Contains all the images used by the website.</li>
-     <li><strong>js</strong> - Contains JavaScript files used by the website. Third party JavaScript
+     <li class="m-t"><span class="bold">Images</span> - Contains all the images used by the website.</li>
+     <li class="m-t"><span class="bold">js</span> - Contains JavaScript files used by the website. Third party
+      JavaScript
       libraries are also included in this
       folder.
      </li>
-     <li><strong>_includes</strong> - Contains the common template components or code used on some or all
+     <li class="m-t"><span class="bold">_includes</span> - Contains the common template components or code used on some
+      or all
       pages on the website. Examples:
       header, footer, navigation, etc.).
      </li>
@@ -361,27 +362,27 @@ permalink: "download-and-setup.html"
    </tr>
    <tr>
     <td>Full-width</td>
-    <td><code>landing.njk</code></td>
+    <td class="bg-gray-75"><code>landing.njk</code></td>
    </tr>
    <tr>
     <td>Standard page</td>
-    <td><code>page.njk</code></td>
+    <td class="bg-gray-75"><code>page.njk</code></td>
    </tr>
    <tr>
     <td>Full width page with main navigation with icons</td>
-    <td><code>navicons-landing.njk</code></td>
+    <td class="bg-gray-75"><code>navicons-landing.njk</code></td>
    </tr>
    <tr>
     <td>Main navigation with icons</td>
-    <td><code>navicons.njk</code></td>
+    <td class="bg-gray-75"><code>navicons.njk</code></td>
    </tr>
    <tr>
     <td>Search results page</td>
-    <td><code>search.njk</code></td>
+    <td class="bg-gray-75"><code>search.njk</code></td>
    </tr>
    <tr>
     <td>Page with dynamic left side navigation</td>
-    <td><code>components.njk</code></td>
+    <td class="bg-gray-75"><code>components.njk</code></td>
    </tr>
   </table>
 
@@ -507,8 +508,8 @@ layout: page.njk
 
    </div>
    <div class="modal-body">
-    <strong aria-label="Source code for Info Blocks">State Web Template structure
-     code:</strong>
+    <span class="bold" aria-label="Source code for Info Blocks">State Web Template structure
+     code:</span>
     <pre>
 <span class="text-success">&lt;!doctype html&gt;</span>
 <span class="text-accent-p2">&lt;html</span> <span class="text-info">lang=</span><span class="text-accent7">"en"</span><span class="text-accent-p2">&gt;</span>
@@ -560,10 +561,6 @@ Page content
 <!-- / End Modal -->
 
 <style>
- strong {
-  font-weight: bold;
- }
-
  .flex-container {
   display: flex;
   flex-direction: row;
@@ -596,26 +593,5 @@ Page content
   border-bottom: 1px solid #aaa;
   border-right: 1px solid #aaa;
   margin: 0;
- }
-
- .folder-structure-list li {
-  margin-bottom: 1rem;
- }
-
- .table-bordered td:nth-child(2) {
-  background-color: #f5f5f5;
- }
-
- /* Make the list within the step list look normal */
- .cagov-step-list li ul li {
-  border: none;
-  font-size: calc(1.125rem + .1vw);
-  font-weight: normal;
-  list-style-type: disc;
-  padding-left: unset;
- }
-
- .cagov-step-list li ul li:before {
-  content: none;
  }
 </style>
