--- a/pages/whats-new.html
+++ b/pages/whats-new.html
@@ -54,8 +54,8 @@ permalink: "whats-new.html"
    these improvements include:</p>
   <ul>
    <li>Active page highlight in the <a href="/structure/site-navigation.html">site navigation</a>.</li>
-   <li>Robust new side navigation, with more enhancements planned.</li>
-   <li>An improved <a href="/compoents/breadcrumb.html">breadcrumb component</a>.</li>
+   <li>Robust new <a href="/components/side-navigation.html">side navigation</a>, with more enhancements planned.</li>
+   <li>An improved <a href="/components/breadcrumb.html">breadcrumb component</a>.</li>
   </ul>
 
   <h2 id="Visual-design">Visual design</h2>
