CSS Shortcuts: Spacing #825

--- a/pages/sample/css-spacing.html
+++ b/pages/sample/css-spacing.html
@@ -43,11 +43,11 @@ permalink: "get-started/css-classes-shortcuts/spacing.html"
     <div class="m-b-lg">
       <table>
         <tr class="font-size-40 text-center">
-          <th class="w-25">m</th>
-          <th>-</th>
-          <th class="w-25">a</th>
-          <th>-</th>
-          <th class="w-25">lg</th>
+          <th class="w-25" style="font-weight: inherit;">m</th>
+          <th style="font-weight: inherit;">-</th>
+          <th class="w-25" style="font-weight: inherit;">a</th>
+          <th style="font-weight: inherit;">-</th>
+          <th class="w-25" style="font-weight: inherit;">lg</th>
         </tr>
         <tr>
           <td class="border border-dark border-top-0">&nbsp;</td>
@@ -90,7 +90,7 @@ permalink: "get-started/css-classes-shortcuts/spacing.html"
       <li><strong>Size:</strong> You can specify how much padding or margin an element receives. In addition to a custom
         size, you can use these common sizes:
         <ul>
-          <li>0: no spacing</li>
+          <li>0: No spacing</li>
           <li>Blank: Base size or 1rem</li>
           <li>sm: .5rem</li>
           <li>md: 1.5rem</li>
@@ -99,16 +99,16 @@ permalink: "get-started/css-classes-shortcuts/spacing.html"
       </li>
     </ol>
 
-    <h2 id="spacing_sample">Sample</h2>
+    <h2>Sample</h2>
     <p>Here is a sample of a card using the spacing class with all three parts.</p>
 
-    <pre>
-&lt;card class=&quot;m-a-lg p-x-100 p-y-lg&quot;&gt;
+    <pre class="m-y-lg">
+&lt;card class=&quot;<span style="color: #D11A6C;">m-a-lg p-x-100 p-y-lg</ style="color: ;">&quot;&gt;
 </pre>
 
     <p>Margin is 3 rem on all sides. Padding is 6 rem on the x-axis and 3 rem on the y-axis.</p>
 
-    <div style="background: #e9ecef; padding: 1rem 6rem 3rem 6rem; text-align: center;">
+    <div class="m-y-lg" style="background: #e9ecef; padding: 1rem 6rem 3rem 6rem; text-align: center;">
       <span style="font-family: monospace;">Margin</span>
       <div style="background: #f8f9fa; padding: 1rem 6rem 3rem 6rem; text-align: center;">
         <span style="font-family: monospace;">Padding</span>
