added on this page styles #831

--- a/pages/download-and-setup.html
+++ b/pages/download-and-setup.html
@@ -30,9 +30,21 @@ permalink: "download-and-setup.html"
  <div class="col-md-9 p-b-lg">
   <h1 id="Downloadandsetup" class="mt-lg-0">Download and setup</h1>
 
-  <div style="background-color: #f8f8f8;padding:2rem;">
 
-   <h2 id="Commonlinks" class="h3 mt-0">Common V6 State Web Template File Links</h2>
+  <nav aria-labelledby="page-navigation-label" class="page-navigation">
+   <div id="page-navigation-label" class="label">On this page</div>
+   <ul>
+    <li><a href="#Commonlinks">Common file links</a></li>
+    <li><a href="#Implementation">Template implementation roadmap</a></li>
+    <li><a href="#FolderStructure">Folder structure and files</a></li>
+    <li><a href="#Eleventy">Using Eleventy</a></li>
+   </ul>
+  </nav>
+
+
+  <div class="p-a-md p-b-lg bg-gray-75">
+
+   <h2 id="Commonlinks" class="h3 mt-0">Common file links</h2>
 
    <div class="flex-container justify-content-between gap-3 font-size-15">
     <div class="brd-solid-1 brd-gray-light bg-white p-3">
@@ -71,10 +83,11 @@ permalink: "download-and-setup.html"
     </div>
    </div>
   </div>
-
+  <p class="m-t-lg">Here are the steps to follow when implementing the V6 State Web Template.
+  </p>
   <h2 id="Implementation">Template implementation roadmap</h2>
 
-  <p>These are the high-level steps to take when you upgrade to the latest template.</p>
+  <p class="m-b-md">These are the high-level steps to take when you upgrade to the latest template.</p>
 
   <ol class="cagov-step-list">
    <li><span class="bold">Back up your current site</span>
