added on this page nav #831

--- a/pages/whats-new.html
+++ b/pages/whats-new.html
@@ -30,6 +30,19 @@ permalink: "whats-new.html"
  <div class="col-md-9 p-b-lg">
 
   <h1 class="mt-lg-0">What's new in V6</h1>
+  <nav aria-labelledby="page-navigation-label" class="page-navigation">
+   <div id="page-navigation-label" class="label">On this page</div>
+   <ul class="columns-2">
+    <li><a href="#Patterns">Patterns</a></li>
+    <li><a href="#Code">Code</a></li>
+    <li><a href="#Navigation">Navigation</a></li>
+    <li><a href="#Visual-design">Visual design</a></li>
+    <li><a href="#Components">Components</a></li>
+    <li><a href="#User-experience">User experience</a></li>
+    <li><a href="#Brand-new-content">Brand new content</a></li>
+   </ul>
+  </nav>
+
   <p>Version 6 of the State Web Template has a new look and feel. With improvements that align with the
    <a href="https://designsystem.webstandards.ca.gov/">California Design System</a>, V6 sets a modern digital standard.
   </p>
