--- a/pages/sample/css-gradient-backgrounds.html
+++ b/pages/sample/css-gradient-backgrounds.html
@@ -9,25 +9,28 @@ permalink: "get-started/css-classes-shortcuts/gradient-backgrounds.html"
   <!-- Side navigation -->
   <nav aria-labelledby="color-schemes-list" class="side-navigation sticky-6">
    <ul class="list-navigation">
-    <li><a href="/get-started/css-classes-shortcuts/" id="color-schemes-list">CSS classes shortcuts</a>
-     <ul>
-      <li><a href="/get-started/css-classes-shortcuts/utility-css-classes.html">Utility CSS classes</a></li>
-      <li><a href="/get-started/css-classes-shortcuts/gradient-backgrounds.html" class="active">Gradient
-        backgrounds</a>
-       <ul>
-        <li><a href="#Linear-gradients">Linear gradients</a></li>
-        <li><a href="#Radial-gradients">Radial gradients</a></li>
-       </ul>
-      </li>
-      <li><a href="/get-started/css-classes-shortcuts/spacing.html">Spacing</a></li>
-      <li><a href="/get-started/css-classes-shortcuts/text-accent-colors.html">Text accent colors</a></li>
-     </ul>
+    <li><a class="landing back" href="/get-started/css-classes-shortcuts/" id="color-schemes-list">CSS classes
+      shortcuts</a></li>
+    <li><a href="/get-started/css-classes-shortcuts/utility-css-classes.html">Utility CSS classes</a></li>
+    <li><a href="/get-started/css-classes-shortcuts/spacing.html">Spacing</a></li>
+    <li><a href="/get-started/css-classes-shortcuts/gradient-backgrounds.html" class="active">Gradient backgrounds</a>
     </li>
+    <li><a href="/get-started/css-classes-shortcuts/text-accent-colors.html">Text accent colors</a></li>
    </ul>
   </nav>
  </div>
  <div class="col-md-9 m-b-lg">
   <h1 class="mt-lg-0">Gradient backgrounds</h1>
+
+  <nav aria-labelledby="page-navigation-label" class="page-navigation">
+   <div id="page-navigation-label" class="label">On this page</div>
+   <ul>
+    <li><a href="#Linear-gradients">Linear gradients</a></li>
+    <li><a href="#Radial-gradients">Radial</a></li>
+   </ul>
+  </nav>
+
+
   <h2 id="Linear-gradients">Linear gradients</h2>
   <!-- Gradients -->
   <div class="row">
