--- a/pages/sample/css-text-accent.html
+++ b/pages/sample/css-text-accent.html
@@ -9,25 +9,28 @@ permalink: "get-started/css-classes-shortcuts/text-accent-colors.html"
   <!-- Side navigation -->
   <nav aria-labelledby="color-schemes-list" class="side-navigation sticky-6">
    <ul class="list-navigation">
-    <li><a href="/get-started/css-classes-shortcuts/" id="color-schemes-list">CSS classes shortcuts</a>
-     <ul>
-      <li><a href="/get-started/css-classes-shortcuts/utility-css-classes.html">Utility CSS classes</a></li>
-      <li><a href="/get-started/css-classes-shortcuts/gradient-backgrounds.html">Gradient backgrounds</a></li>
-      <li><a href="/get-started/css-classes-shortcuts/spacing.html">Spacing</a></li>
-      <li><a href="/get-started/css-classes-shortcuts/text-accent-colors.html" class="active">Text accent colors</a>
-       <ul>
-        <li><a href="#Accent-colors">Accent colors</a></li>
-        <li><a href="#Text-highlight">Text highlight</a></li>
-       </ul>
-      </li>
-     </ul>
+    <li><a class="landing back" href="/get-started/css-classes-shortcuts/" id="color-schemes-list">CSS classes
+      shortcuts</a></li>
+    <li><a href="/get-started/css-classes-shortcuts/utility-css-classes.html">Utility CSS classes</a></li>
+    <li><a href="/get-started/css-classes-shortcuts/spacing.html">Spacing</a></li>
+    <li><a href="/get-started/css-classes-shortcuts/gradient-backgrounds.html">Gradient backgrounds</a>
     </li>
+    <li><a href="/get-started/css-classes-shortcuts/text-accent-colors.html" class="active">Text accent colors</a></li>
    </ul>
   </nav>
  </div>
 
  <div class="col-md-9 p-b-lg">
   <h1 class="mt-lg-0">Text accent colors</h1>
+
+  <nav aria-labelledby="page-navigation-label" class="page-navigation">
+   <div id="page-navigation-label" class="label">On this page</div>
+   <ul>
+    <li><a href="#Sample">Sample</a></li>
+    <li><a href="#Text-highlight">Text highlight</a></li>
+   </ul>
+  </nav>
+
   <p>Change text colors with a handful of emphasis utility classes. It is best to exercise
    restraint when using these classes on general body copy as color contrast may be
    insufficient for the visually impaired.</p>
