added on this page nav to structure pages #831

--- a/pages/sample/structure-search.html
+++ b/pages/sample/structure-search.html
@@ -27,6 +27,19 @@ permalink: "structure/search.html"
 
   <h1 class="mt-lg-0 m-b-0">Search</h1>
   <p class="subtitle">Other names: searchbox, search field</p>
+
+  <nav aria-labelledby="page-navigation-label" class="page-navigation">
+   <div id="page-navigation-label" class="label">On this page</div>
+   <ul class="columns-2">
+    <li><a href="#Active-search">Active search</a></li>
+    <li><a href="#Inactive-search">Inactive search</a></li>
+    <li><a href="#Featured-search">Featured search</a></li>
+    <li><a href="#Usage">Usage</a></li>
+    <li><a href="#Accessibility">Accessibility</a></li>
+   </ul>
+  </nav>
+
+
   <p>A search input provides visitors an input field to search for specific content within a site or
    database. </p>
   <p>With search, visitors can filter content using different keywords or phrases.
