--- a/pages/sample/structure-site-navigation.html
+++ b/pages/sample/structure-site-navigation.html
@@ -29,7 +29,20 @@ permalink: "structure/site-navigation.html"
  <div class="col-md-9 p-b-lg">
 
 
-  <h1 class="mt-lg-0 m-b-lg">Site navigation</h1>
+  <h1 class="mt-lg-0">Site navigation</h1>
+
+  <nav aria-labelledby="page-navigation-label" class="page-navigation">
+   <div id="page-navigation-label" class="label">On this page</div>
+   <ul class="columns-2">
+    <li><a href="#Single-level-menu">Single-level menu</a></li>
+    <li><a href="#Dropdown-menu">Dropdown menu</a></li>
+    <li><a href="#Megamenu">Megamenu</a></li>
+    <li><a href="#Icon-menu">Icon menu</a></li>
+    <li><a href="#Usage">Usage</a></li>
+    <li><a href="#Accessibility">Accessibility</a></li>
+   </ul>
+  </nav>
+
   <p>Site navigation appears at the top of every page on your site. It gives links to pages in the site,
    sometimes ordered by topic, task, or user type. This makes it easier for people to navigate the website.</p>
   <p>There are two options for each site navigation item:</p>
