--- a/pages/sample/structure-footer.html
+++ b/pages/sample/structure-footer.html
@@ -25,6 +25,14 @@ permalink: "structure/footer.html"
  <div class="col-md-9 m-b-lg">
 
   <h1 class="mt-lg-0">Footer</h1>
+  <nav aria-labelledby="page-navigation-label" class="page-navigation">
+   <div id="page-navigation-label" class="label">On this page</div>
+   <ul>
+    <li><a href="#Sample">Sample</a></li>
+    <li><a href="#Usage">Usage</a></li>
+    <li><a href="#Accessibility">Accessibility</a></li>
+   </ul>
+  </nav>
   <p>The footer is a structural component that puts the state's standard footer at the very bottom of your
    site. Having a common footer tells people that the website is an official product of the State of California, which
    increases user trust.</p>
