--- a/pages/sample/structure-mobile-controls.html
+++ b/pages/sample/structure-mobile-controls.html
@@ -26,6 +26,15 @@ permalink: "structure/mobile-controls.html"
 
 
   <h1 class="mt-lg-0">Mobile controls</h1>
+
+  <nav aria-labelledby="page-navigation-label" class="page-navigation">
+   <div id="page-navigation-label" class="label">On this page</div>
+   <ul>
+    <li><a href="#Sample">Sample</a></li>
+    <li><a href="#Usage">Usage</a></li>
+    <li><a href="#Accessibility">Accessibility</a></li>
+   </ul>
+  </nav>
   <p>Mobile controls are mobile-friendly website search and navigation. Search and navigation toggle
    buttons expand and collapse when interacted with in mobile view.</p>
   <p>It includes:</p>
