--- a/pages/sample/structure-settings-bar.html
+++ b/pages/sample/structure-settings-bar.html
@@ -26,6 +26,14 @@ permalink: "structure/settings-bar.html"
 
 
   <h1 class="mt-lg-0">Settings</h1>
+  <nav aria-labelledby="page-navigation-label" class="page-navigation">
+   <div id="page-navigation-label" class="label">On this page</div>
+   <ul>
+    <li><a href="#Sample">Sample</a></li>
+    <li><a href="#Usage">Usage</a></li>
+    <li><a href="#Accessibility">Accessibility</a></li>
+   </ul>
+  </nav>
   <p>Website settings become visible after selecting the gear icon in the upper right hand corner.</p>
   <p>The settings allows visitors to:</p>
 
