--- a/pages/sample/structure-utility-header.html
+++ b/pages/sample/structure-utility-header.html
@@ -26,6 +26,14 @@ permalink: "structure/utility-header.html"
 
 
   <h1 class="mt-lg-0">Utility header</h1>
+  <nav aria-labelledby="page-navigation-label" class="page-navigation">
+   <div id="page-navigation-label" class="label">On this page</div>
+   <ul>
+    <li><a href="#Sample">Sample</a></li>
+    <li><a href="#Usage">Usage</a></li>
+    <li><a href="#Accessibility">Accessibility</a></li>
+   </ul>
+  </nav>
   <p>The utility header puts a standard header at the very top of your site. Having a common header tells
    people that the website is an official product of the State of California, which increases user trust.</p>
 
