added 0n this page nav to visual design pages #831

--- a/pages/sample/color.html
+++ b/pages/sample/color.html
@@ -10,7 +10,22 @@ permalink: "visual-design/color.html"
   <!-- Side navigation -->
   <nav aria-labelledby="color-themes-list" class="side-navigation sticky-6">
    <ul class="list-navigation">
-    <li><a href="/visual-design/color.html" class="active">Colors</a></li>
+    <li><a href="/visual-design/color.html" class="active">Colors</a>
+     <ul>
+      <li><a href="/visual-design/color/?delta">Delta</a></li>
+      <li><a href="/visual-design/color/?eureka">Eureka</a></li>
+      <li><a href="/visual-design/color/?mono">Mono</a></li>
+      <li><a href="/visual-design/color/?oceanside">Oceanside</a></li>
+      <li><a href="/visual-design/color/?orangecounty">Orange County</a></li>
+      <li><a href="/visual-design/color/?pasorobles">Paso Robles</a></li>
+      <li><a href="/visual-design/color/?sacramento">Sacramento</a></li>
+      <li><a href="/visual-design/color/?santabarbara">Santa Barbara</a></li>
+      <li><a href="/visual-design/color/?santacruz">Santa Cruz</a></li>
+      <li><a href="/visual-design/color/?shasta">Shasta</a></li>
+      <li><a href="/visual-design/color/?sierra">Sierra</a></li>
+      <li><a href="/visual-design/color/?trinity">Trinity</a></li>
+     </ul>
+    </li>
     <li><a href="/visual-design/icons.html">Icons</a></li>
     <li><a href="/visual-design/typography.html">Typography</a></li>
    </ul>
