--- a/pages/sample/colortheme.html
+++ b/pages/sample/colortheme.html
@@ -18,7 +18,7 @@ permalink: "visual-design/color/index.html"
    <!-- Side navigation -->
    <nav aria-labelledby="color-themes-list" class="side-navigation sticky-6">
     <ul class="list-navigation">
-     <li><a href="/visual-design/color.html" id="color-themes-list" class="landing back">Colors</a></li>
+     <li><a href="/visual-design/color.html" id="color-themes-list" class="landing back">Color themes</a></li>
 
      <li><a href="/visual-design/color/?delta">Delta</a></li>
      <li><a href="/visual-design/color/?eureka">Eureka</a></li>
