--- a/pages/sample/typography.html
+++ b/pages/sample/typography.html
@@ -20,6 +20,16 @@ permalink: "visual-design/typography.html"
  <div class="col-md-9 p-b-lg">
 
   <h1 id="Typography" class="mt-lg-0">Typography</h1>
+
+  <nav aria-labelledby="page-navigation-label" class="page-navigation">
+   <div id="page-navigation-label" class="label">On this page</div>
+   <ul>
+    <li><a href="#Typeface">Typeface</a></li>
+    <li><a href="#Font-code">Font code</a></li>
+    <li><a href="#Heading-hierarchy">Heading hierarchy</a></li>
+   </ul>
+  </nav>
+
   <p>
    Use typography to present your department’s brand and content as clearly as possible.
   </p>
@@ -46,7 +56,7 @@ permalink: "visual-design/typography.html"
    </div>
   </div>
 
-  <h2 id="Fontcode">Font code</h2>
+  <h2 id="Font-code">Font code</h2>
 
   <table id="fontcodetable" class="">
    <thead>
@@ -82,7 +92,7 @@ permalink: "visual-design/typography.html"
    </tbody>
   </table>
 
-  <h2 id="Headinghierarchy">Heading hierarchy</h2>
+  <h2 id="Heading-hierarchy">Heading hierarchy</h2>
   <p>The line height is a ratio of 1.75 to the base font size. For each ascending level, the ratio is decreased by ⅛.
    As a result, larger headings have smaller line-height ratios, which improves readability.</p>
 
