CSS Shortcuts: Spacing #825

--- a/pages/sample/css-spacing.html
+++ b/pages/sample/css-spacing.html
@@ -112,7 +112,7 @@ permalink: "get-started/css-classes-shortcuts/spacing.html"
   <p>Here is a sample of a card using the spacing class with all three parts.</p>
 
   <pre class="m-y-lg">
-&lt;card class=&quot;<span style="color: #D11A6C;">m-a-lg p-x-100 p-y-lg</ style="color: ;">&quot;&gt;
+&lt;card class=&quot;<span style="color: #D11A6C;">m-a-lg p-x-100 p-y-lg</span>&quot;&gt;
 </pre>
 
   <p>Margin is 3 rem on all sides. Padding is 6 rem on the x-axis and 3 rem on the y-axis.</p>
